repo-template1/components/service-a/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  # 1. Service adı, diğer kaynaklar tarafından referanslanır.
  name: service-a
  labels:
    app: repo-template1
    component: service-a
spec:
  # 2. Bu selector, bu servisin trafik yönlendireceği Podları belirler.
  selector:
    app: repo-template1
    component: service-a
  ports:
  - # 3. Buradaki port, servis içinden erişilen porttur.
    port: 8080
    # 4. targetPort, Pod içindeki container portunu işaret eder.
    targetPort: http
    # 5. İsim, Route ve probe konfigürasyonlarında kullanılabilir.
    name: http
  # 6. ClusterIP, servisin yalnızca cluster içinden erişilebilir olmasını sağlar.
  type: ClusterIP
